<resources>
    <string name="app_name">Reproductor</string>
    <string name="bienvenida">Bienvenid@!</string>
    <string name="iniciar">Para continuar inicie sesión</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="cerrar">Cerrar Sesion</string>
    <string name="radio">Radio</string>
    <string name="buscar">Buscar...</string>
    <string name="configuracion">Configuración</string>
    <string name="timerA">Programar apagado</string>
    <string name="horaA">Elegir hora de apagado</string>
    <string name="horaE">Elegir hora de encendido</string>
    <string name="timerE">Programar encendido</string>
    <string name="contacto">Comunicate con Nosotros</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    </resources>